syntax = "proto3";
package chain4energy.c4echain.cfeenergybank;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cfeenergybank/params.proto";
import "cfeenergybank/energy_token.proto";
import "cfeenergybank/token_params.proto";
import "cfeenergybank/tokens_history.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/chain4energy/c4e-chain/x/cfeenergybank/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/params";
  }
  // Queries a list of EnergyTokenUserAddress items.
	rpc EnergyTokenUserAddress(QueryEnergyTokenUserAddressRequest) returns (QueryEnergyTokenUserAddressResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/energy_token_user_address/{userAddress}";
	}

// Queries a list of CurrentBalance items.
	rpc CurrentBalance(QueryCurrentBalanceRequest) returns (QueryCurrentBalanceResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/current_balance/{userAddress}/{tokenName}";
	}

// Queries a EnergyToken by id.
	rpc EnergyToken(QueryGetEnergyTokenRequest) returns (QueryGetEnergyTokenResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/energy_token/{id}";
	}

	// Queries a list of EnergyToken items.
	rpc EnergyTokenAll(QueryAllEnergyTokenRequest) returns (QueryAllEnergyTokenResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/energy_token";
	}

// Queries a TokenParams by index.
	rpc TokenParams(QueryGetTokenParamsRequest) returns (QueryGetTokenParamsResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/token_params/{index}";
	}

	// Queries a list of TokenParams items.
	rpc TokenParamsAll(QueryAllTokenParamsRequest) returns (QueryAllTokenParamsResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/token_params";
	}

// Queries a TokensHistory by id.
	rpc TokensHistory(QueryGetTokensHistoryRequest) returns (QueryGetTokensHistoryResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/tokens_history/{id}";
	}

	// Queries a list of TokensHistory items.
	rpc TokensHistoryAll(QueryAllTokensHistoryRequest) returns (QueryAllTokensHistoryResponse) {
		option (google.api.http).get = "/chain4energy/c4e-chain/cfeenergybank/tokens_history";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryEnergyTokenUserAddressRequest {
  string userAddress = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryEnergyTokenUserAddressResponse {
	repeated EnergyToken EnergyToken = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryCurrentBalanceRequest {
  string userAddress = 1;
  string tokenName = 2;
}

message QueryCurrentBalanceResponse {
	uint64 balance = 1;
}

message QueryGetEnergyTokenRequest {
	uint64 id = 1;
}

message QueryGetEnergyTokenResponse {
	EnergyToken EnergyToken = 1 [(gogoproto.nullable) = false];
}

message QueryAllEnergyTokenRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEnergyTokenResponse {
	repeated EnergyToken EnergyToken = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetTokenParamsRequest {
	  string index = 1;

}

message QueryGetTokenParamsResponse {
	TokenParams tokenParams = 1 [(gogoproto.nullable) = false];
}

message QueryAllTokenParamsRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTokenParamsResponse {
	repeated TokenParams tokenParams = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetTokensHistoryRequest {
	uint64 id = 1;
}

message QueryGetTokensHistoryResponse {
	TokensHistory TokensHistory = 1 [(gogoproto.nullable) = false];
}

message QueryAllTokensHistoryRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTokensHistoryResponse {
	repeated TokensHistory TokensHistory = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
